--- a/style.css
+++ b/style.css
@@ -30,5 +30,27 @@ video {
     font-size: 13px;
     color: #e0dfdf;
   }
+header {
+ background-color: #2a2c39;
+   color: #bdc3c7;
+   font-family: Arial, sans-serif;
+   text-align: center;
+   height: 100xp;
+   margin: 0;
+   border: none;
+   widht: 100%
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+html, body {
+   margin:0;
+   padding: 0;
+}
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
   
 
